[gd_scene load_steps=9 format=2]

[ext_resource path="res://Graphics/Sprites/Goods/Airplane.png" type="Texture" id=1]
[ext_resource path="res://Graphics/Sprites/Goods/kREST.png" type="Texture" id=2]
[ext_resource path="res://Objects/Player/Window_production/Factory/FactoryPanel.gd" type="Script" id=3]
[ext_resource path="res://Graphics/Fonts/pixel_2.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Objects/Player/Window_production/Factory/ButtonStyleBox.tres" type="StyleBox" id=5]
[ext_resource path="res://Objects/Player/Window_production/Factory/Actions.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 4 )

[node name="Province_panel" type="HBoxContainer"]
margin_right = 1920.0
margin_bottom = 70.0
custom_constants/separation = 0
script = ExtResource( 3 )

[node name="Name_of_province" type="Button" parent="."]
margin_right = 180.0
margin_bottom = 114.0
size_flags_horizontal = 3
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 5 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
text = "Провинция"

[node name="Good" type="TextureRect" parent="."]
margin_left = 180.0
margin_right = 360.0
margin_bottom = 114.0
size_flags_horizontal = 3
texture = ExtResource( 1 )
stretch_mode = 4

[node name="Output" type="Label" parent="."]
margin_left = 360.0
margin_right = 540.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Выпуск"
align = 1
valign = 1

[node name="Workers" type="Label" parent="."]
margin_left = 540.0
margin_right = 720.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Рабочие"
align = 1
valign = 1

[node name="Bonus_for_production" type="Label" parent="."]
margin_left = 720.0
margin_right = 928.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Эффективность"
align = 1
valign = 1

[node name="Income" type="Label" parent="."]
margin_left = 928.0
margin_right = 1108.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0.712891, 0.146894, 0.146894, 1 )
custom_fonts/font = SubResource( 1 )
text = "Прибыль"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 1108.0
margin_right = 1668.0
margin_bottom = 114.0
custom_constants/separation = 0

[node name="Button" type="Button" parent="HBoxContainer"]
margin_right = 112.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 2 )

[node name="Button2" type="Button" parent="HBoxContainer"]
margin_left = 112.0
margin_right = 224.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 2 )

[node name="Button3" type="Button" parent="HBoxContainer"]
margin_left = 224.0
margin_right = 336.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 2 )

[node name="Button4" type="Button" parent="HBoxContainer"]
margin_left = 336.0
margin_right = 448.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 2 )

[node name="Button5" type="Button" parent="HBoxContainer"]
margin_left = 448.0
margin_right = 560.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3
icon = ExtResource( 2 )

[node name="Actions" type="VBoxContainer" parent="."]
margin_left = 1668.0
margin_right = 1920.0
margin_bottom = 114.0
custom_constants/separation = 0
script = ExtResource( 6 )

[node name="Expansion" type="Button" parent="Actions"]
margin_right = 252.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Расширение(210)"

[node name="Subsidization" type="Button" parent="Actions"]
margin_top = 38.0
margin_right = 252.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Субсидии(НЕТ)"

[node name="Open" type="Button" parent="Actions"]
margin_top = 76.0
margin_right = 252.0
margin_bottom = 114.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Открыть"

[connection signal="gui_input" from="Good" to="." method="on_good_button_pressed"]
[connection signal="pressed" from="Actions/Expansion" to="Actions" method="expand_factory"]
[connection signal="pressed" from="Actions/Subsidization" to="Actions" method="set_subsidization"]
[connection signal="pressed" from="Actions/Open" to="Actions" method="set_closing"]
